<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/representative_details"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#546E7A"/>

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#546E7A"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#546E7A"/>

    <Spinner
        android:id="@+id/spinnerRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="48dp"
        android:padding="10dp"
        android:hint="@string/select_region"/>

    <Button
        android:id="@+id/buttonAddRepresentative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_representative"
        android:textColor="@android:color/white"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2"
        android:layout_marginTop="16dp"
        android:id="@+id/tableLayout">

        <TableRow>
            <TextView
                android:text="@string/name"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/Area"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/Action"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</LinearLayout>