<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/company_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/Company_Logo"
            android:src="@mipmap/ic_launcher_round" /> <!-- Replace with your logo -->

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/company_name"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="36sp" />
    </LinearLayout>

    <!-- Main Activity Content -->
    <GridLayout
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/navigation_bar"
        android:layout_below="@+id/header"
        android:layout_margin="16dp"
        android:layout_marginTop="559dp"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="?attr/colorAccent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/total_sales"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="?attr/colorAccent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/commissions_earned"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="?attr/colorAccent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/sales_trends"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:background="?attr/colorAccent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/quick_links"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </GridLayout>
    <!-- Navigation Bar -->
    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="8dp">

        <Button
            android:id="@+id/button_sales"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sales"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>